# Aptos-Inter-IIT-12.0

./: README.md
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  server.ts
backend/src/controllers/: users.ts
backend/src/routes/: transactions.ts  users.ts
backend/src/services/: db.ts
backend/src/utils/: constants.ts  (+1 more)
contracts/AMM_Contract/: Move.toml
contracts/Calc_Contract/: Move.toml
contracts/CoinContracts/: Move.toml
contracts/Econia_pool_Contract/: Move.toml  econia_pool.move
contracts/Futures_Contract/: Move.toml
contracts/Test/: Move.toml
contracts/Wallet_Contract/: Move.toml
econia/: market.py
frontend/: README.md  package-lock.json  package.json
frontend-mobile/: README.md  pubspec.yaml
frontend-mobile/lib/: app_theme.dart  locator.dart  main.dart
frontend-mobile/linux/: CMakeLists.txt  my_application.cc
frontend-mobile/test/: widget_test.dart
frontend-mobile/web/: index.html  manifest.json
frontend-mobile/windows/: CMakeLists.txt
frontend/src/: App.css  App.tsx  index.css  index.tsx  react-app-env.d.ts
futures_market/: Cargo.toml
futures_market/src/: api.rs  futures_market.rs  main.rs
python-backend/: .gitignore
python-backend/backend/: asgi.py  settings.py  urls.py
python-backend/econia/: market.py
python-backend/market/: models.py  service.py  urls.py
python-backend/transactions/: models.py  service.py  urls.py
python-backend/users/: models.py  service.py  urls.py
python-backend/utils/: database.py  maths.py  traderwallet.py
python-backend/wallet/: models.py
(+95 files in other folders)
