[package]
name = "trading_market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
econia-sdk = { path = ".." }
aptos-sdk.workspace = true
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
rand = "0.7"
reqwest = "0.11"
tokio = { version = "1.21.0", features = ["full"] }
